--- a/RandomMath.html
+++ b/RandomMath.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="lib/sprintf.js"></script>
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	</head>
-	<body></body>
+	<body>$$a$$</body>
 	<script src="randomMath.js"></script>
 </html>
