Appending to a Tree working

--- a/RandomMath.html
+++ b/RandomMath.html
@@ -3,8 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="lib/sprintf.js"></script>
+		<script src="lib/Tree.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	</head>
-	<body>$$a$$</body>
+	<body>
+		<div id="mainDiv">$$a$$</div>
+		<button onclick="stop()">Stop</button>
+	</body>
 	<script src="randomMath.js"></script>
 </html>
