--- a/RandomMath.html
+++ b/RandomMath.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<script src="lib/file.js"></script>
 		<script src="lib/sprintf.js"></script>
 		<script src="lib/Tree.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
