--- a/RandomMath.html
+++ b/RandomMath.html
@@ -5,11 +5,18 @@
 		<script src="lib/file.js"></script>
 		<script src="lib/sprintf.js"></script>
 		<script src="lib/Tree.js"></script>
+		<script type="text/x-mathjax-config">
+			MathJax.Hub.Config({
+			  CommonHTML: { linebreaks: { automatic: true } },
+			  "HTML-CSS": { linebreaks: { automatic: true } },
+					 SVG: { linebreaks: { automatic: true } }
+			});
+		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	</head>
 	<body>
 		<div id="mainDiv">$$a$$</div>
-		<button onclick="stop()">Stop</button>
+		<button onclick="toggle()">Stop</button>
 	</body>
 	<script src="randomMath.js"></script>
 </html>
