--- a/RandomMath.html
+++ b/RandomMath.html
@@ -3,20 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="lib/file.js"></script>
+		<script src="randomMathUtil.js"></script>
 		<script src="lib/sprintf.js"></script>
 		<script src="lib/Tree.js"></script>
 		<script type="text/x-mathjax-config">
 			MathJax.Hub.Config({
-			  CommonHTML: { linebreaks: { automatic: true } },
-			  "HTML-CSS": { linebreaks: { automatic: true } },
-					 SVG: { linebreaks: { automatic: true } }
+				CommonHTML: { linebreaks: { automatic: true } },
+				"HTML-CSS": { linebreaks: { automatic: true } },
+				SVG: { linebreaks: { automatic: true } }
 			});
 		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	</head>
 	<body>
 		<div id="mainDiv">$$a$$</div>
-		<button onclick="toggle()">Stop</button>
+		<button id="toggleButton" onclick="toggle()">Stop</button>
 	</body>
 	<script src="randomMath.js"></script>
 </html>
