--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 	</head>
-	<body style="font-size: 1000%; text-align: center;">
-		<a href="RandomMath.html">Start</a>
+	<body style="font-size: 500%; text-align: center;">
+		<a href="Timer/Timer.html">Timer</a>
+		<a href="RandomMath/RandomMath.html">Random Math</a>
 	</body>
 </html>
