--- a/Timer/Timer_Korean.html
+++ b/Timer/Timer_Korean.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>타이머</title>
+		<title>PIRI 타이머</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
@@ -29,7 +29,11 @@
 			</div>
 		</article>
 		<button onclick="changeBackground();">배경 변경</button>
-		<footer>Image: NASA</footer>
+		<footer>
+			<span id="imageCredit">Image: NASA</span>
+			<br>
+			<a href="Timer_English.html">English version</a>
+		</footer>
 		<script src="background.js"></script>
 		<script src="lib/Timer.js"></script>
 		<script src="timer.js"></script>
