--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body style="font-size: 500%; text-align: center;">
-		<a href="Timer/Timer.html">Timer</a>
+		<a href="Timer/Timer_English.html">Timer</a>
 		<a href="RandomMath/RandomMath.html">Random Math</a>
 	</body>
 </html>
