Add a blank background

--- a/Timer/Timer_English.html
+++ b/Timer/Timer_English.html
@@ -31,7 +31,7 @@
 		</article>
 		<button onclick="changeBackground();">Change background</button>
 				<footer>
-			<span id="imageCredit">Image: NASA</span>
+			<span id="imageCredit">Image: Public domain</span>
 			<br>
 			<a href="Timer_Korean.html">Korean version</a>
 		</footer>
