--- a/Timer/Timer_Korean.html
+++ b/Timer/Timer_Korean.html
@@ -30,7 +30,7 @@
 		</article>
 		<button onclick="changeBackground();">배경 변경</button>
 		<footer>
-			<span id="imageCredit">Image: NASA</span>
+			<span id="imageCredit">Image: Public domain</span>
 			<br>
 			<a href="Timer_English.html">English version</a>
 		</footer>
