--- a/Timer/Timer_English.html
+++ b/Timer/Timer_English.html
@@ -22,8 +22,8 @@
 					<button onclick="timer.addTime(10000);">10s</button>
 					<button onclick="timer.addTime(1000);">1s</button>
 					<input id="customTime" type="number">
-					<button onclick="timer.addTime(parseInt(customTime.value) * 1000);">s</button>
-					<button onclick="timer.addTime(parseInt(customTime.value) * 60000);">m</button>
+					<button onclick="timer.addTime(parseInt(customTime.value) * 1000 || 0);">s</button>
+					<button onclick="timer.addTime(parseInt(customTime.value) * 60000 || 0);">m</button>
 				</p>
 				<p id="showChecks">
 					<label><input id="showHoursCheck" type="checkbox" onchange="changeVisibility(this);">Show over 1h</label>
