Update ajax library

--- a/RandomMath/RandomMath.html
+++ b/RandomMath/RandomMath.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<script src="lib/file.js"></script>
+		<script src="lib/ajax.js"></script>
 		<script src="randomMathUtil.js"></script>
 		<script src="lib/sprintf.js"></script>
 		<script src="lib/Tree.js"></script>
