--- a/RandomMath/RandomMath.html
+++ b/RandomMath/RandomMath.html
@@ -18,6 +18,7 @@
 	<body>
 		<div id="mainDiv">$$a$$</div>
 		<button id="toggleButton" onclick="toggle()">Stop</button>
+		<button id="eraseButton" onclick="erase()">Erase</button>
 		<br>
 		<label>Background update per second
 			<input id="treeUpdateRate" type="number" value="5" step="0.1" min="0.1" max="500" onchange="changed(this, this.value)">
