Timer: Add styles for mobile, add license

--- a/Timer/Timer_Korean.html
+++ b/Timer/Timer_Korean.html
@@ -38,6 +38,7 @@
 		</footer>
 		<script src="background.js"></script>
 		<script src="lib/Timer.js"></script>
+		<script src="format.js"></script>
 		<script src="timer.js"></script>
 	</body>
 </html>
