--- a/Timer/Timer_English.html
+++ b/Timer/Timer_English.html
@@ -1,4 +1,4 @@
-﻿<!--TODO: Find a better way for translations-->
+﻿<!--TODO: Find a better way of making translations-->
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -32,13 +32,14 @@
 			</div>
 		</article>
 		<button onclick="changeBackground();">Change background</button>
-				<footer>
+		<footer>
 			<span id="imageCredit">Image: Public domain</span>
 			<br>
 			<a href="Timer_Korean.html">Korean version</a>
 		</footer>
 		<script src="background.js"></script>
 		<script src="lib/Timer.js"></script>
+		<script src="format.js"></script>
 		<script src="timer.js"></script>
 	</body>
 </html>
