--- a/RandomMath/RandomMath.html
+++ b/RandomMath/RandomMath.html
@@ -6,6 +6,7 @@
 		<script src="randomMathUtil.js"></script>
 		<script src="lib/sprintf.js"></script>
 		<script src="lib/Tree.js"></script>
+		<!--MathJax-->
 		<script type="text/x-mathjax-config">
 			MathJax.Hub.Config({
 				CommonHTML: { linebreaks: { automatic: true } },
@@ -14,6 +15,9 @@
 			});
 		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+		<!--KaTeX-->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="mainDiv">$$a$$</div>
@@ -27,6 +31,9 @@
 		<label>Display update per background update
 			<input id="displayUpdateRate" type="number" value="0.5" step="0.1" min="0.1" max="1" onchange="changed(this, this.value)">
 		</label>
+		<br>
+		<label><input type="radio" name="backend" value="katex" onchange="katexInit();" checked>KaTeX</label>
+		<label><input type="radio" name="backend" value="mathjax" onchange="mathjaxInit();">MathJax</label>
 	</body>
 	<script src="randomMath.js"></script>
 </html>
