말모이찾기

--- a/Geummoi/geummoi.html
+++ b/Geummoi/geummoi.html
@@ -5,7 +5,9 @@
 		<script src="lib/ajax.js"></script>
 	</head>
 	<body>
-		반가운 누리!
+		<div id="가온">
+		</div>
 	</body>
-	<script src="moi.js"></script>
+	<script charset="utf-8" src="moi.js"></script>
+	<script charset="utf-8" src="moinun.js"></script>
 </html>
