--- a/Geummoi/geummoi.html
+++ b/Geummoi/geummoi.html
@@ -5,7 +5,9 @@
 		<script src="lib/ajax.js"></script>
 	</head>
 	<body>
-		<div id="가온">
+		<input id="찾을말치" type="text">
+		<button onclick="찾아보여주기(찾을말치.value);">찾기</button>
+		<div id="보여주는곳">
 		</div>
 	</body>
 	<script charset="utf-8" src="moi.js"></script>
