--- a/Geummoi/geummoi.html
+++ b/Geummoi/geummoi.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="geummoi.css">
 		<script src="lib/ajax.js"></script>
 	</head>
 	<body>
