하다 되다 빼도 찾아지게, 없을때 말하기

--- a/Geummoi/geummoi.html
+++ b/Geummoi/geummoi.html
@@ -10,6 +10,9 @@
 		<button onclick="찾아보여주기(찾을말치.value);">찾기</button>
 		<div id="보여주는곳">
 		</div>
+		<footer>
+			<a href="manuri.malmoi">쌓아롬(파일) 받기</a>
+		</footer>
 	</body>
 	<script charset="utf-8" src="moi.js"></script>
 	<script charset="utf-8" src="moinun.js"></script>
