안고치손.가져오기를 moinun.js로, ajax.js를 /lib으로

--- a/Geummoi/geummoi.html
+++ b/Geummoi/geummoi.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="geummoi.css">
-		<script src="lib/ajax.js"></script>
+		<script src="../lib/ajax.js"></script>
+		<script charset="utf-8" src="moi.js"></script>
 	</head>
 	<body>
 		<input id="찾을말치" type="text">
@@ -11,9 +12,8 @@
 		<div id="보여주는곳">
 		</div>
 		<footer>
-			<a href="manuri.malmoi">쌓아롬(파일) 받기</a>
+			<a href="manuri.malmoi">아롬(파일) 받기</a>
 		</footer>
 	</body>
-	<script charset="utf-8" src="moi.js"></script>
 	<script charset="utf-8" src="moinun.js"></script>
 </html>
