다듬은말에도 붙임, 붙임읽기

--- a/Geummoi/geummoi.html
+++ b/Geummoi/geummoi.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<title>피리 맨우리말모이</title>
 		<link rel="stylesheet" type="text/css" href="geummoi.css">
 		<script src="../lib/ajax.js"></script>
 		<script charset="utf-8" src="moi.js"></script>
