--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>피리 맨우리말모이</title>
-		<link rel="stylesheet" type="text/css" href="geummoi.css">
+		<title>피리 쉬운 맨우리말모이</title>
+		<link rel="stylesheet" type="text/css" href="Swinmoi.css">
 		<script src="../lib/ajax.js"></script>
 		<script charset="utf-8" src="moi.js"></script>
 	</head>
@@ -13,7 +13,7 @@
 		<div id="보여주는곳">
 		</div>
 		<footer>
-			<a href="manuri.malmoi">아롬(파일) 받기</a>
+			<a href="manuri.swin">아롬(파일) 받기</a>
 		</footer>
 	</body>
 	<script charset="utf-8" src="moinun.js"></script>
