찾는말치 키우고 저절로 눌리게

--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -8,8 +8,8 @@
 		<script charset="utf-8" src="moi.js"></script>
 	</head>
 	<body>
-		<input id="찾을말치" type="text">
-		<button onclick="찾아보여주기(찾을말치.value);">찾기</button>
+		<input id="찾을말치" type="text" autofocus>
+		<button id="찾기단추" onclick="찾아보여주기(찾을말치.value);">찾기</button>
 		<div id="보여주는곳">
 		</div>
 		<footer>
