--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body style="font-size: 500%; text-align: center;">
 		<a href="Timer/Timer_English.html">Timer</a>
 		<a href="RandomMath/RandomMath.html">Random Math</a>
+		<a href="Swinmoi/Swinmoi.html">쉰모이</a>
 	</body>
 </html>
