Add title to RandomMath

--- a/RandomMath/RandomMath.html
+++ b/RandomMath/RandomMath.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<title>PIRI Random Math</title>
 		<script src="../lib/ajax.js"></script>
 		<script src="randomMathUtil.js"></script>
 		<script src="lib/sprintf.js"></script>
