--- a/Timer/Timer_Korean.html
+++ b/Timer/Timer_Korean.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>피리 시간잼틀</title>
+		<title>피리 제잼틀</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
