--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -13,7 +13,7 @@
 		<div id="보여주는곳">
 		</div>
 		<footer>
-			말모이 <a href="manuri.swin">아롬(파일) 1</a> <a href="manuri.swint">아롬 2</a>
+			말모이 <a href="manuri.swin">아롬(파일) 받기</a>
 		</footer>
 	</body>
 	<script charset="utf-8" src="moinun.js"></script>
