--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<title>PIRI Web Tools</title>
 	</head>
 	<body style="font-size: 500%; text-align: center;">
 		<a href="Timer/Timer_English.html">Timer</a>
