--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -11,6 +11,8 @@
 		<input id="찾을말치" type="text" autofocus>
 		<button id="찾기단추" onclick="찾아보여주기(찾을말치.value);">찾기</button>
 		<div id="보여주는곳">
+			말모이를 가져오고 있습니다. 조금만 기다리세요... <br>
+			(이 누리쪽은 자바스크립트가 없으면 돌아가지 않습니다. 자바스크립트를 켜기 싫다면 아래 아롬을 받아 주세요)
 		</div>
 		<footer>
 			말모이 <a href="manuri.swin">아롬(파일) 받기</a>
