안흔모이 더함

--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -10,12 +10,13 @@
 	<body>
 		<input id="찾을말치" type="text" autofocus>
 		<button id="찾기단추" onclick="찾아보여주기(찾을말치.value);">찾기</button>
+		<label><input id="안흔찾기" type="checkbox" checked>안 흔한 말도 찾기</label>
 		<div id="보여주는곳">
 			말모이를 가져오고 있습니다. 조금만 기다리세요... <br>
 			(이 누리쪽은 자바스크립트가 없으면 돌아가지 않습니다. 자바스크립트를 켜기 싫다면 아래 아롬을 받아 주세요)
 		</div>
 		<footer>
-			말모이 <a href="manuri.swin">아롬(파일) 받기</a>
+			말모이 <a href="manuri.swin">아롬(파일) 하나</a> <a href="anhen.swin">아롬 둘</a>
 		</footer>
 	</body>
 	<script charset="utf-8" src="moinun.js"></script>
