찾넘김으로 찾기 더함

--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -14,7 +14,8 @@
 		<label><input id="엮맞찾기" type="checkbox">엮은이가 맞춘말</label>
 		<div id="보여주는곳">
 			말모이를 가져오고 있습니다. 조금만 기다리세요... <br>
-			(이 누리쪽은 자바스크립트가 없으면 돌아가지 않습니다. 자바스크립트를 켜기 싫다면 아래 아롬을 받아 주세요)
+			(이 누리쪽은 자바스크립트가 없으면 돌아가지 않습니다. 자바스크립트를 켜기 싫다면 아래 아롬을 받아 주세요) <br>
+			(이 글이 사라지지 않으면 누리쪽을 새로고쳐 보세요)
 		</div>
 		<footer>
 			말모이 <a href="manuri.swin">아롬(파일) 하나</a> <a href="anhen.swin">아롬 둘</a> <a href="yemat.swin">아롬 셋</a> <br>
