똑같은것만 찾기 더함

--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -23,9 +23,10 @@
 			화살 오른쪽 다듬은말은 모두 맨우리말이며 한자, 깊들온말(귀화어), 들온말은 하나도 없습니다. 있는데 풀이가 붙어 있지 않으면 잘못 들어간 것이니 알려주세요. <br>
 			움직씨와 그림씨 가운데 "하다", "되다"로 끝나면서 네글씨보다 긴 것은 "하다", "되다"를 쓰지 않았습니다.<br>
 			띄어썼을 때 읽기 쉬워지는 말이 아니면 굳이 띄어쓰지 않았습니다. <br>
-			쉼을 쓰면 여러 말을 함께 찾습니다. 보기: '함께,찾다' <br>
+			쉼을 쓰면 여러 말을 함께 찾습니다. 보기: 함께,찾다 <br>
+			큰따옴을 쓰면 똑같은 말만 찾습니다. 보기: "동" <br>
 			모든 낱말을 보려면 아무것도 넣지 말고 찾기를 누르세요. <br>
-			찾넘김(GET)도 됩니다. 보기: '?q=넘기다'
+			찾넘김(GET)도 됩니다. 보기: ?q=넘기다
 		</footer>
 	</body>
 	<script charset="utf-8" src="moinun.js"></script>
