--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -11,7 +11,7 @@
 		<input id="찾을말치" type="text" autofocus>
 		<button id="찾기단추" onclick="친말로찾기();">찾기</button>
 		<label><input id="안흔찾기" type="checkbox" checked>안 흔한 말</label>
-		<label><input id="엮맞찾기" type="checkbox">엮은이가 맞춘말</label>
+		<label><input id="엮맞찾기" type="checkbox" checked>엮은이가 맞춘말</label>
 		<div id="보여주는곳">
 			말모이를 가져오고 있습니다. 조금만 기다리세요... <br>
 			(이 누리쪽은 자바스크립트가 없으면 돌아가지 않습니다. 자바스크립트를 켜기 싫다면 아래 아롬을 받아 주세요) <br>
