--- a/Timer/Timer_English.html
+++ b/Timer/Timer_English.html
@@ -44,6 +44,7 @@
 		<script src="background.js"></script>
 		<script src="lib/Timer.js"></script>
 		<script src="format.js"></script>
+		<script src="lib/sound.js"></script>
 		<script src="timer.js"></script>
 	</body>
 </html>
