--- a/Timer/Timer_English.html
+++ b/Timer/Timer_English.html
@@ -37,7 +37,7 @@
 		</article>
 		<button onclick="changeBackground();">Change background</button>
 		<footer>
-			<span id="imageCredit">Image: Public domain</span>
+			<span id="imageCredit">Image: N/A</span>
 			<br>
 			<a href="Timer_Korean.html">Korean version</a>
 		</footer>
