--- a/Timer/Timer_Korean.html
+++ b/Timer/Timer_Korean.html
@@ -36,7 +36,7 @@
 		</article>
 		<button onclick="changeBackground();">바탕 바꾸기</button>
 		<footer>
-			<span id="imageCredit">Image: Public domain</span>
+			<span id="imageCredit">Image: N/A</span>
 			<br>
 			<a href="Timer_English.html">English version</a>
 		</footer>
