--- a/Timer/Timer_Korean.html
+++ b/Timer/Timer_Korean.html
@@ -15,8 +15,9 @@
 					<button onclick="timer.stop(false);">지우기</button>
 				</p>
 				<p id="modeButtons">
-					<label><input type="radio" name="moderadio" value="timer" onchange="timer.mode = Timer.Mode.TIMER;" checked>내리제잼틀</label>
-					<label><input type="radio" name="moderadio" value="stopwatch" onchange="timer.mode = Timer.Mode.STOPWATCH;">올리제잼틀</label>
+					<label><input type="radio" name="moderadio" value="timer" onchange="changeMode(Timer.Mode.TIMER);" checked>올리제잼틀</label>
+					<label><input type="radio" name="moderadio" value="stopwatch" onchange="changeMode(Timer.Mode.STOPWATCH);">내리제잼틀</label>
+					<label><input type="radio" name="moderadio" value="clock" onchange="changeMode(Timer.Mode.CLOCK);">이제틀</label>
 				</p>
 				<p id="timeButtons">
 					<button onclick="timer.addTime(3600000);">1시간</button>
@@ -41,6 +42,8 @@
 		<button onclick="changeBackground();">바탕 바꾸기</button>
 		<footer>
 			<span id="imageCredit">Image: N/A</span>
+			<br>
+			<span id="disclaimer">누비개가 알려주는 제에 따른 것으로, 틀릴지도 모릅니다.</span>
 			<br>
 			<a href="Timer_English.html">English version</a>
 		</footer>
