--- a/Timer/Timer_English.html
+++ b/Timer/Timer_English.html
@@ -16,9 +16,9 @@
 					<button onclick="timer.stop(false);">Stop</button>
 				</p>
 				<p id="modeButtons">
-					<label><input type="radio" name="moderadio" value="timer" onchange="changeMode(Timer.Mode.TIMER);" checked>Timer mode</label>
-					<label><input type="radio" name="moderadio" value="stopwatch" onchange="changeMode(Timer.Mode.STOPWATCH);">Stopwatch mode</label>
-					<label><input type="radio" name="moderadio" value="clock" onchange="changeMode(Timer.Mode.CLOCK);">Clock mode</label>
+					<label><input type="radio" name="moderadio" value="timer" onchange="changeMode(Timekeeper.Mode.TIMER);" checked>Timer mode</label>
+					<label><input type="radio" name="moderadio" value="stopwatch" onchange="changeMode(Timekeeper.Mode.STOPWATCH);">Stopwatch mode</label>
+					<label><input type="radio" name="moderadio" value="clock" onchange="changeMode(Timekeeper.Mode.CLOCK);">Clock mode</label>
 				</p>
 				<p id="timeButtons">
 					<button onclick="timer.addTime(3600000);">1h</button>
@@ -49,7 +49,7 @@
 			<a href="Timer_Korean.html">Korean version</a>
 		</footer>
 		<script src="background.js"></script>
-		<script src="lib/Timer.js"></script>
+		<script src="lib/Timekeeper.js"></script>
 		<script src="format.js"></script>
 		<script src="lib/sound.js"></script>
 		<script src="timer.js"></script>
