읽개를 더 너그럽게

--- a/Swinmoi/Swinmoi.html
+++ b/Swinmoi/Swinmoi.html
@@ -21,7 +21,7 @@
 		</div>
 		<footer>
 			<label><input id="찾은말적어놓기" type="checkbox" checked>(뒤로가기 누르면 아까 찾은 말이 나오도록)찾은 말 적어놓기</label> <br>
-			말모이 <a href="manuri.swin">아롬(파일) 하나</a> <a href="anhen.swin">아롬 둘</a> <a href="yemat.swin">아롬 셋</a> <br>
+			말모이 <a href="manuri.swin">아롬(파일) 하나</a> <a href="yemat.swin">아롬 둘</a> <br>
 			화살보람 오른쪽 다듬은말은 모두 맨우리말이며 [] 안에 다듬은 보기로 실은 섞인말 몇을 빼면 한자, 깊들온말(귀화어), 들온말은 하나도 없습니다. <br>
 			움직씨와 그림씨 가운데 "하다", "되다"로 끝나면서 네글씨보다 긴 것은 "하다", "되다"를 쓰지 않았습니다.<br>
 			띄어써서 읽기 쉬워지는 말이 아니면 굳이 띄어쓰지 않았습니다. <br>
