아무넣 더함

--- a/Timer/Timer_Korean.html
+++ b/Timer/Timer_Korean.html
@@ -31,7 +31,7 @@
 				</p>
 				<p id="showChecks">
 					<label><input id="showHoursCheck" type="checkbox" onchange="updateTime(timer.time);">1시간 위도 보이기</label>
-					<label><input id="showUnderOneCheck" type="checkbox" onchange="updateTime(timer.time);">1초 밑도 보이기</label>
+					<label><input id="showUnderOneCheck" type="checkbox" onchange="updateTime(timer.time);">1초 아래도 보이기</label>
 				</p>
 				<p id="textChanges">
 					<input id="customTitle" type="text" placeholder="누리쪽 이름...">
