--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<a href="Timer/Timer_English.html">Timer</a>
 		<a href="RandomMath/RandomMath.html">Random Math</a>
 		<a href="Swinmoi/Swinmoi.html">쉰모이</a>
+		<a href="Amuneoh/Amuneoh.html">아무넣</a>
 	</body>
 </html>
