글꼴건사 더함

--- a/Amuneoh/Amuneoh.html
+++ b/Amuneoh/Amuneoh.html
@@ -14,6 +14,9 @@
 	<span id="넣을글묶음"></span>
 	<br>
 	<span id="글쇠도움말"></span>
+	<br>
+	<br>
+	글꼴 씌우기: <input type="file" id="글꼴아롬">
 	<script src="amuneoh.js"></script>
 </body>
 </html>
