--- a/Amuneoh/Amuneoh.html
+++ b/Amuneoh/Amuneoh.html
@@ -15,8 +15,11 @@
 	<br>
 	<span id="글쇠도움말"></span>
 	<br>
+	글꼴: <div id="글꼴켜끄기"></div>
 	<br>
-	글꼴 씌우기: <input type="file" id="글꼴아롬">
+	다른 글꼴 씌우기: <input type="file" id="글꼴아롬">
+	<script src="lib/polyfills.js"></script>
+	<script src="lib/OrderedCheckGroup.js"></script>
 	<script src="amuneoh.js"></script>
 </body>
 </html>
