RandomMath: remove numbers from pattern files; break IE11 support

--- a/Timer/Timer_English.html
+++ b/Timer/Timer_English.html
@@ -49,7 +49,7 @@
 			<span id="imagePath">Image: N/A, </span>
 			<span id="soundPath">Sound: simple beep</span>
 			<br>
-			<span id="disclaimer">This is based on time reported by your browser. It may not be accurate.</span>
+			<span id="disclaimer">This is based on time reported by your browser. It may be inaccurate.</span>
 			<br>
 			<a href="Timer_Korean.html">Korean version</a>
 		</footer>
